--- a/src/content/blog/es/google-revoluciona-la-generación-de-imágenes-con-gemini-2-0-flash.mdx
+++ b/src/content/blog/es/google-revoluciona-la-generación-de-imágenes-con-gemini-2-0-flash.mdx
@@ -3,6 +3,7 @@ title: 'Google Revoluciona la Generación de Imágenes con Gemini 2.0 Flash'
 description: 'Google Gemini 2.0 Flash revoluciona la edición de imágenes con IA nativa. Descubre sus funciones y cómo probarlo gratis.'
 pubDate: 'Mar 18, 2025'
 heroImage: '/0_ke8xOBNMadRQmBY1.webp'
+customURL: '/blog/en/google-transforms-image-generation-with-gemini-2-0-flash/'
 ---
 
 La inteligencia artificial ha alcanzado un nivel impresionante en la generación de imágenes, con productos maduros que ofrecen una calidad extraordinaria. Sin embargo, Google ha dado un paso más allá con el lanzamiento de **Gemini 2.0 Flash**, una nueva versión de su modelo que introduce una capacidad revolucionaria: la generación de imágenes de forma nativa. A diferencia de otros modelos como Imagen 3 de la propia Google, esta nueva versión no solo se centra en la calidad de las imágenes generadas, sino en su **versatilidad y capacidad de edición avanzada**.
